crates/ssa-cache-schema/tests/ui/fail_union.stderr
error: CacheSchema derive does not support unions
 --> tests/ui/fail_union.rs:4:1
  |
4 | union Bad {
  | ^^^^^
