crates/ssa-cache-schema/tests/ui/fail_union.rs
use ssa_cache_schema::CacheSchema;

#[derive(CacheSchema)]
union Bad {
    value: u32,
}

fn main() {}
